@@ -1,5 +1,4 @@
 ﻿// The NiTiS-Dev licenses this file to you under the MIT license.
-using System;
 using Terraria;
 using Terraria.ID;
 using Terraria.ModLoader;
@@ -8,27 +7,13 @@ using Terraria.ModLoader.IO;
 namespace Renucation.Common.Systems;
 public class EnemyKillSystem : ModSystem
 {
-	private byte oneOfEYEDefeated;
 	private bool laboratoryUnlocked;
 	public override void OnWorldLoad()
 	{
-		On.Terraria.NPC.DoDeathEvents += (a1, a2, a3) =>
+		On.Terraria.NPC.DoDeathEvents_BeforeLoot += (a1, a2, a3) =>
 		{
-			if (a2.type is NPCID.SkeletronPrime or NPCID.TheDestroyer)
-			{
-				UnlockLaboratory();	
-			}
-			else if (a2.type is NPCID.Spazmatism or NPCID.Retinazer)
-			{
-				if (oneOfEYEDefeated == 1)
-				{
-					oneOfEYEDefeated = 2;
-					UnlockLaboratory();
-				}else
-				{
-					oneOfEYEDefeated = 1;
-				}
-			}
+			if (a2.type is NPCID.SkeletronPrime or NPCID.TheDestroyer or NPCID.Spazmatism or NPCID.Retinazer)
+				UnlockLaboratory();
 		};
 	}
 	public override void SaveWorldData(TagCompound tag)
@@ -41,6 +26,9 @@ public class EnemyKillSystem : ModSystem
 	}
 	public void UnlockLaboratory()
 	{
+		if (laboratoryUnlocked)
+			return;
+
 		Main.NewText("The doors of the laboratory collapsed under the roar of a mechanical creature");
 		laboratoryUnlocked = true;
 	}
